Second commit: add function (Phase2, 3)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ venv/
 
 # Model files (large)
 models/*.pkl
+models/*.ckpt
+models/*.zip
+lightning_logs/
+models/tft_checkpoints/
+models/rl_agents/
 
 # Data cache
 tickers.csv
