--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,13 @@ ta>=0.10
 
 # Machine Learning
 lightgbm>=4.0
-scikit-learn>=1.3
+pytorch-forecasting>=1.0.0
+pytorch-lightning>=2.0.0
+torch>=2.0.0
+tensorboard
+scikit-learn
+statsmodels
 joblib>=1.3
+stable-baselines3>=2.0.0
+gymnasium>=0.29.0
+shimmy>=1.0.0
